# docker-django

./: .gitignore  README.md  docker-compose.yml
django/: Dockerfile  manage.py  openapi-schema.yml  pyproject.toml  setup.cfg
django/accounts/: apps.py  authentication.py  email.py  filters.py  models.py  pagination.py  permissions.py  serializers.py  urls.py  utils.py  views.py
django/accounts/migrations/: 0001_initial.py
django/docs/: openapi-schema.yml
django/locale/ja/LC_MESSAGES/: django.po
django/scripts/: fmt.sh  lint.sh  openapi.sh  runserver.sh
django/settings/: common.py  urls.py  wsgi.py
django/settings/env/: dev.py  unit.py
django/templates/accounts/password_forget/: body.txt  subject.txt
django/templates/accounts/password_reset_email/: body.txt  subject.txt
django/templates/accounts/user_create/: body.txt  subject.txt
django/tests/: conftest.py
django/tests/factories/: accounts.py
django/tests/test_accounts/: test_login.py
